--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -9,6 +9,15 @@ spring:
       ddl-auto: update
     show-sql: true
     database-platform: org.hibernate.dialect.PostgreSQLDialect
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          # 認可サーバーのエンドポイントを設定
+          issuer-uri: http://keycloak:8080/realms/myrealm
+
+server:
+  port: 8081
 
 logging:
   level:
