--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -53,6 +53,24 @@
     <artifactId>spring-boot-starter-test</artifactId>
     <scope>test</scope>
   </dependency>
+
+
+  <!-- bluesky -->
+  <dependency>
+    <groupId>dev.whyoleg.cryptography</groupId>
+    <artifactId>cryptography-core</artifactId>
+    <version>0.4.0</version>
+  </dependency>
+  <dependency>
+    <groupId>work.socialhub.kbsky</groupId>
+    <artifactId>core-jvm</artifactId>
+    <version>0.3.0</version>
+  </dependency>
+  <dependency>
+    <groupId>work.socialhub.kbsky</groupId>
+    <artifactId>auth-jvm</artifactId>
+    <version>0.3.0</version>
+  </dependency>
 </dependencies>
 <build>
   <plugins>
