タイムライン取得時のエラーを回避する設定を追加。

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -71,6 +71,16 @@
     <artifactId>auth-jvm</artifactId>
     <version>0.3.0</version>
   </dependency>
+  <dependency>
+    <groupId>org.jetbrains.kotlinx</groupId>
+    <artifactId>kotlinx-serialization-core-jvm</artifactId>
+    <version>1.8.1</version>
+  </dependency>
+  <dependency>
+    <groupId>org.jetbrains.kotlinx</groupId>
+    <artifactId>kotlinx-serialization-json-jvm</artifactId>
+    <version>1.8.1</version>
+  </dependency>
 </dependencies>
 <build>
   <plugins>
