--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -81,6 +81,34 @@
     <artifactId>kotlinx-serialization-json-jvm</artifactId>
     <version>1.8.1</version>
   </dependency>
+
+  <dependency>
+    <groupId>org.mastodon4j</groupId>
+    <artifactId>mastodon4j-core</artifactId>
+    <version>0.10.0</version>
+  </dependency>
+
+  <!-- Mastodon -->
+  <dependency>
+    <groupId>org.mastodon4j</groupId>
+    <artifactId>mastodon4j-core</artifactId>
+    <version>0.10.0</version>
+  </dependency>
+  <dependency>
+    <groupId>io.github.openfeign</groupId>
+    <artifactId>feign-jackson</artifactId>
+    <version>13.6</version>
+  </dependency>
+  <dependency>
+    <groupId>com.fasterxml.jackson.datatype</groupId>
+    <artifactId>jackson-datatype-jsr310</artifactId>
+    <version>2.19.0</version>
+  </dependency>
+  <dependency>
+    <groupId>org.jsoup</groupId>
+    <artifactId>jsoup</artifactId>
+    <version>1.20.1</version>
+  </dependency>
 </dependencies>
 <build>
   <plugins>
