CORS 設定の外部定義化。

--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -24,3 +24,15 @@ logging:
     org.springframework: INFO
     org.hibernate.SQL: DEBUG
 
+messagestream:
+  cors:
+    # CORS 設定を application.yaml で外部化
+    allowed-origin-patterns:
+      - "*"
+    allowed-methods:
+      - "*"
+    allowed-headers:
+      - "*"
+    allow-credentials: true
+    mapping-path: "/**"
+
