--- a/.devcontainer/devcontainer.vim.json
+++ b/.devcontainer/devcontainer.vim.json
@@ -8,7 +8,7 @@
     "HISTCONTROL": "erasedups",
     "OPENAI_API_KEY": "${localEnv:OPENAI_API_KEY}",
   },
-  "postCreateCommand": "npm install -g @openai/codex",
+  "postCreateCommand": "npm install -g @openai/codex; npm install -g @anthropic-ai/claude-code",
   // devcontainer/cli はまだ forwardPorts に対応していないため、
   // 必要に応じて forwardPorts の定義を appPort に転記する。
   // ※ コンテナ側で Listen する際は、 `127.0.0.1` **ではなく** `0.0.0.0` で Listen すること。
@@ -33,6 +33,11 @@
       "type": "bind",
       "source": "${localEnv:HOME}/.ssh",
       "target": "/home/vscode/.ssh"
+    },
+    {
+      "type": "bind",
+      "source": "${localEnv:HOME}/.claude.json",
+      "target": "/home/vscode/.claude.json"
     },
     {
       "type": "bind",
